plugins {
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'java'
}

group = 'com.everbit'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	
	// Database
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.7.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	
	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'
	
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
	
	// Utils
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.core:jackson-core'
	implementation 'com.fasterxml.jackson.core:jackson-annotations'
	implementation 'de.huxhorn.sulky:de.huxhorn.sulky.ulid:8.3.0'
	
	// Docs
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
	
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.projectreactor:reactor-test'
	
	// Auth0 JWT
	implementation 'com.auth0:java-jwt:4.4.0'

	// TA4J
	implementation 'org.ta4j:ta4j-core:0.15'
}

tasks.named('test') {
	useJUnitPlatform()
}
